--- a/src/index.html
+++ b/src/index.html
@@ -1,52 +1,152 @@
 <!DOCTYPE html>
 <html lang="en" class="antialiased">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wolf-Kinnect</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Birthstone&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./output.css">
 </head>
-<body>
-   <div class="container mx-auto">
-    <div class="navbar rounded-b-lg bg-gradient-to-b from-TEAL_LIGHT_ACTIVE from-10% flex justify-between px-8">
-        <div class="col">
-            <div class="avatar">
-                <div class="w-14 rounded-full">
-                    <img src="assets/Logo.webp">
+
+<body class="bg-gradient-to-b from-TEAL_LIGHT_ACTIVE from-10% h-full antialiased">
+    <div class="container mx-auto relative">
+        <div class="z-40 fixed top-0 right-0 left-0 navbar rounded-b-lg bg-TEAL_LIGHT_ACTIVE flex justify-between px-24 pt-5 pb-5">
+            <div class="col">
+                <div class="avatar">
+                    <div class="w-14">
+                        <svg class="fill-TEAL_NORMAL" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                            class="bi bi-clipboard2-data-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M10 .5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5.5.5 0 0 1-.5.5.5.5 0 0 0-.5.5V2a.5.5 0 0 0 .5.5h5A.5.5 0 0 0 11 2v-.5a.5.5 0 0 0-.5-.5.5.5 0 0 1-.5-.5" />
+                            <path
+                                d="M4.085 1H3.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1h-.585q.084.236.085.5V2a1.5 1.5 0 0 1-1.5 1.5h-5A1.5 1.5 0 0 1 4 2v-.5q.001-.264.085-.5M10 7a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0zm-6 4a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm4-3a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0V9a1 1 0 0 1 1-1" />
+                        </svg>
+                    </div>
+                </div>
+                <a href="#" class="btn btn-ghost text-xl text-TEAL_DARKER">Wolf-Kinnect</a>
+                <div class="flex-none">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a href=""
+                                class="hover:bg-TEAL_LIGHT_ACTIVE hover:rounded-md hover:text-neutral-50">Home</a></li>
+                        <li><a href="" class="hover:bg-TEAL_LIGHT_ACTIVE hover:rounded-md hover:text-neutral-50">About
+                                Us</a></li>
+                        <li><a href=""
+                                class="hover:bg-TEAL_LIGHT_ACTIVE hover:rounded-md hover:text-neutral-50">Testimony</a>
+                        </li>
+                        <li><a href=""
+                                class="hover:bg-TEAL_LIGHT_ACTIVE hover:rounded-md hover:text-neutral-50">Plan</a></li>
+                    </ul>
                 </div>
             </div>
-            <a href="#" class="btn btn-ghost text-xl text-TEAL_DARKER">Wolf-Kinnect</a>
-            <div class="flex-none">
-                <ul class="menu menu-horizontal px-1">
-                    <li><a href="" class="hover:bg-TEAL_LIGHT_ACTIVE hover:rounded-md hover:text-neutral-50">Home</a></li>
-                    <li><a href="" class="hover:bg-TEAL_LIGHT_ACTIVE hover:rounded-md hover:text-neutral-50">About Us</a></li>
-                    <li><a href="" class="hover:bg-TEAL_LIGHT_ACTIVE hover:rounded-md hover:text-neutral-50">Testimony</a></li>
-                    <li><a href="" class="hover:bg-TEAL_LIGHT_ACTIVE hover:rounded-md hover:text-neutral-50">Plan</a></li>
-                </ul>
+            <button
+                class="btn rounded-md btn-sm bg-TEAL_NORMAL text-TEAL_LIGHT hover:bg-TEAL_NORMAL_HOVER hover:border-TEAL_LIGHT_ACTIVE hover:outline-4 hover:outline-offset-2">Try
+                it!</button>
+        </div>
+        <div class="flex w-full flex-row items-center gap-5 h-dvh">
+            <div class="flex w-full flex-col items-end">
+                <div class="notes_gambar text-CREAM_LIGHT -mb-5 -mr-5 z-30 text-[20px] rotate-45">Slide Me</div>
+                <div class="flex flex-row carousel rounded-box w-3/4 h-80 float-end">
+                    <div class="carousel-item w-full">
+                        <img src="assets/model_1.jpg" class="w-full object-cover" />
+                    </div>
+                    <div class="carousel-item w-full">
+                        <img src="assets/model_2.jpg" class="w-full object-cover" />
+                    </div>
+                    <div class="carousel-item w-full">
+                        <img src="assets/model_3.jpg" class="w-full object-cover" />
+                    </div>
+                </div>
+            </div>
+            <div class="flex w-full flex-col gap-10">
+                <div class="flex w-full flex-col gap-2">
+                    <h1 class="font-light text-sm">Dont worry about your data! with</h1>
+                    <h1 class="font-bold text-TEAL_DARK text-7xl">Wolf-Kinnect</h1>
+                    <h1 class="font-light text-sm">Will be safe and sound!</h1>
+                </div>
+                <div class="flex w-full flex-col gap-2">
+                    <h1>Dont leave us hanging! Call Us!</h1>
+                    <button class="btn btn-sm text-TEAL_NORMAL w-fit">Make an apointment</button>
+                </div>
             </div>
         </div>
-        <button class="btn rounded-md btn-sm bg-TEAL_NORMAL text-TEAL_LIGHT hover:bg-TEAL_NORMAL_HOVER hover:border-TEAL_LIGHT_ACTIVE hover:outline-4 hover:outline-offset-2">Try it!</button>
-    </div>
-    <div class="grid grid-flow-col grid-rows-3 gap-4 mx-auto w-fit">
-        <div class="row-span-3"><img class="h-full w-96 object-cover rounded-lg" src="assets/model_1.jpg"></div>
-        <div class="col-span-2 flex flex-col ">
-            <h1 class="font-light">Don't worry about your data because</h1>
-            <h1 class="text-5xl font-bold text-TEAL_DARKER">Wolf-Kinnect</h1>
-            <h1 class="font-light">will protect you!</h1>
+        <div class="flex w-full flex-col items-center gap-10 h-dvh z-0">
+            <div class="col">
+                <h1 class="font-semibold text-7xl text-TEAL_DARK">Why choose us?</h1>
+            </div>
+            <div class="flex flex-row gap-10 mt-20">
+                <div class="card bg-base-100 w-96 shadow-md hover:shadow-2xl duration-700 hover:scale-105">
+                    <figure>
+                        <img src="assets/secure.jpg" class="object-cover h-64 w-full" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Secure</h2>
+                        <p>Our systems use last blockchain technology and make comunication end-to-end encryptions</p>
+                    </div>
+                </div>
+                <div class="card bg-base-100 w-96 shadow-md hover:shadow-2xl duration-700 hover:scale-105">
+                    <figure>
+                        <img src="assets/reliable.jpg" class="object-cover h-64 w-full" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Reliable</h2>
+                        <p>Our secure infrastructure ensures 99.9% uptime, making Wolf-Kinnect the reliable data partner
+                            you can count on every day.</p>
+                    </div>
+                </div>
+                <div class="card bg-base-100 w-96 shadow-md hover:shadow-2xl duration-700 hover:scale-105">
+                    <figure>
+                        <img src="assets/easy.jpg" class="object-cover h-64 w-full" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Easy To Use</h2>
+                        <p>With an intuitive interface designed for users of all technical levels, Wolf-Kinnect makes
+                            data management as simple as a few taps.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-span-2 row-span-2">
-            <h1>Dont leave us hanging! call us!</h1>
-            <button class="btn btn-sm bg-RED_LIGHT">
-                <h1>
-                    Make Appointment
-                </h1>
-            </button>
-        </div>
+        <footer class="footer bg-neutral text-neutral-content p-10">
+            <aside>
+                <img src="assets/wm_dark.png" class="w-10 rounded-sm">
+                <p>
+                    Hasqibar Studio
+                    <br />
+                    Design and code with love ❤️
+                </p>
+            </aside>
+            <nav>
+                <h6 class="footer-title">Social</h6>
+                <div class="grid grid-flow-col gap-4">
+                    <a>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                            class="bi bi-linkedin" viewBox="0 0 16 16">
+                            <path
+                                d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
+                        </svg>
+                    </a>
+                    <a>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                            class="bi bi-instagram" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
+                        </svg>
+                    </a>
+                    <a>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                            class="bi bi-behance" viewBox="0 0 16 16">
+                            <path
+                                d="M4.654 3c.461 0 .887.035 1.278.14.39.07.711.216.996.391s.497.426.641.747c.14.32.216.711.216 1.137 0 .496-.106.922-.356 1.242-.215.32-.566.606-.997.817.606.176 1.067.496 1.348.922s.461.957.461 1.563c0 .496-.105.922-.285 1.278a2.3 2.3 0 0 1-.782.887c-.32.215-.711.39-1.137.496a5.3 5.3 0 0 1-1.278.176L0 12.803V3zm-.285 3.978c.39 0 .71-.105.957-.285.246-.18.355-.497.355-.887 0-.216-.035-.426-.105-.567a1 1 0 0 0-.32-.355 1.8 1.8 0 0 0-.461-.176c-.176-.035-.356-.035-.567-.035H2.17v2.31c0-.005 2.2-.005 2.2-.005zm.105 4.193c.215 0 .426-.035.606-.07.176-.035.356-.106.496-.216s.25-.215.356-.39c.07-.176.14-.391.14-.641 0-.496-.14-.852-.426-1.102-.285-.215-.676-.32-1.137-.32H2.17v2.734h2.305zm6.858-.035q.428.427 1.278.426c.39 0 .746-.106 1.032-.286q.426-.32.53-.64h1.74c-.286.851-.712 1.457-1.278 1.848-.566.355-1.243.566-2.06.566a4.1 4.1 0 0 1-1.527-.285 2.8 2.8 0 0 1-1.137-.782 2.85 2.85 0 0 1-.712-1.172c-.175-.461-.25-.957-.25-1.528 0-.531.07-1.032.25-1.493.18-.46.426-.852.747-1.207.32-.32.711-.606 1.137-.782a4 4 0 0 1 1.493-.285c.606 0 1.137.105 1.598.355.46.25.817.532 1.102.958.285.39.496.851.641 1.348.07.496.105.996.07 1.563h-5.15c0 .58.21 1.11.496 1.396m2.24-3.732c-.25-.25-.642-.391-1.103-.391-.32 0-.566.07-.781.176s-.356.25-.496.39a.96.96 0 0 0-.25.497c-.036.175-.07.32-.07.46h3.196c-.07-.526-.25-.882-.497-1.132zm-3.127-3.728h3.978v.957h-3.978z" />
+                        </svg>
+                    </a>
+                </div>
+            </nav>
+        </footer>
     </div>
-   </div>
 </body>
+
 </html>
