Styling Home Part 2

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,9 @@
         </div>
         <div class="flex w-full flex-row items-center gap-5 h-dvh">
             <div class="flex w-full flex-col items-end">
-                <div class="notes_gambar text-CREAM_LIGHT -mb-5 -mr-5 z-30 text-[20px] rotate-45">Slide Me</div>
+                <div class="notes_gambar text-CREAM_LIGHT -mb-5 -mr-5 z-30 rotate-[-6.142rad]">
+                    <h1 class="text-3xl">Slide Me</h1>
+                </div>
                 <div class="flex flex-row carousel rounded-box w-3/4 h-80 float-end">
                     <div class="carousel-item w-full">
                         <img src="assets/model_1.jpg" class="w-full object-cover" />
@@ -71,6 +73,16 @@
                 <div class="flex w-full flex-col gap-2">
                     <h1>Dont leave us hanging! Call Us!</h1>
                     <button class="btn btn-sm text-TEAL_NORMAL w-fit">Make an apointment</button>
+                </div>
+            </div>
+        </div>
+        <div class="w-full h-dvh relative text-TEAL_LIGHT">
+            <div class="hero h-2/3 bg-fixed bg-[url(assets/bg.png)] rounded-[2vw] ">
+                <div class="max-w-md">
+                    <h1 class="mb-5 text-5xl font-bold">About Us</h1>
+                    <p class="mb-5">
+                        Wolf-Kinnect is an innovative company founded by a dedicated team of data security experts committed to providing reliable, easy-to-use, and affordable data protection solutions, with a focus on maximum integrity and superior customer service to deliver peace of mind to all our users.
+                    </p>
                 </div>
             </div>
         </div>
@@ -110,7 +122,7 @@
                 </div>
             </div>
         </div>
-        <footer class="footer bg-neutral text-neutral-content p-10">
+        <footer class="footer bg-neutral text-neutral-content pt-64">
             <aside>
                 <img src="assets/wm_dark.png" class="w-10 rounded-sm">
                 <p>
