--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
                 </div>
             </div>
         </div>
-        <div id="testimoni" class="flex w-full flex-col items-center gap-10 h-dvh z-0">
+        <div id="testimoni" class="flex w-full flex-col items-center gap-10 h-dvh z-0 pt-5">
             <div class="title">
                 <h1 class="font-bold text-5xl text-TEAL_DARKER">Over 100+ company trust us</h1>
             </div>
